name:                haskell-test
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/new-template#readme
license:             BSD3
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     OpenCog.Test
  other-modules:       OpenCog.Test.Template
  build-depends:       base
                     , template-haskell
                     , tasty
                     , tasty-smallcheck
                     , smallcheck
                     , opencog-atomspace
  default-language:    Haskell2010

Test-Suite haskell-test-suite
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , opencog-atomspace
                     , tasty
                     , tasty-smallcheck
                     , smallcheck
                     , haskell-test
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/new-template
